<resources>
  <string name="app_name">FitSync</string>
  <string name="persiapan_gerakan">Persiapan Gerakan</string>
  <string name="lewatkan">Lewatkan</string>
  <string name="timer" formatted="true">00:%s</string>
  <string name="selanjutnya">Selanjutnya</string>
  <string name="tools_jumping_jack">tools_jumping_jack</string>
  <string name="btn_logout">Keluar</string>
  <string name="hai_user">Hai %s</string>
  <string name="jaga_tubuh_kuat">Jaga tubuh kuat</string>
  <string name="bersama_kami">Bersama kami</string>
  <string name="jumlah_kalori">128</string>
  <string name="kalori_minggu">Kalori / minggu</string>
  <string name="waktu_kalori">102</string>
  <string name="menit_minggu">Menit / minggu</string>
  <string name="history_latihan">History Latihan</string>
  <string name="lengan_pemula">Lengan • Pemula</string>
  <string name="kaki_pemula">Kaki • Pemula</string>
  <string name="aomine_daiki">Aomine daiki</string>
  <string name="pemula">Pemula</string>
  <string name="quotes">“The only one who can beat me is me”</string>
  <string name="_126">126</string>
  <string name="kalori">Kalori</string>
  <string name="_12">12</string>
  <string name="menit">menit</string>
  <string name="btn_panah_kanan">→</string>
  <string name="menengah">Menengah</string>
  <string name="lanjutan">Lanjutan</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="otot_perut_pemula">Otot perut • Pemula</string>
  <string name="_18_menit">18 menit</string>
  <string name="dada_pemula">Dada • Pemula</string>
  <string name="lengan_pemula_fragment">Lengan • Pemula</string>
  <string name="kaki_pemula_fragment">Kaki • Pemula</string>
  <string name="otot_perut_menengah">Otot perut • Menengah</string>
  <string name="dada_menengah">Dada • Menengah</string>
  <string name="lengan_menengah">Lengan • Menengah</string>
  <string name="kaki_menengah">Kaki • Menengah</string>
  <string name="otot_perut_lanjutan">Otot perut • Lanjutan</string>
  <string name="dada_lanjutan">Dada • Lanjutan</string>
  <string name="lengan_lanjutan">Lengan • Lanjutan</string>
  <string name="kaki_lanjutan">Kaki • Lanjutan</string>
  <string name="jumping_jacks">Jumping Jack</string>
  <string name="x_16">x 16</string>
  <string name="text_repetisi">x %s</string>
  <string name="mountain_climber">Mountain Climber</string>
  <string name="leg_raises">Leg Raises</string>
  <string name="plank">Plank</string>
  <string name="_00_20">00:20</string>
  <string name="mulai">Mulai</string>
  <string name="otot_dada_pemula">Otot dada • Pemula</string>
  <string name="triceps_dips">Triceps dips</string>
  <string name="cobra_stretch">Cobra stretch</string>
  <string name="diamond_push_up">Diamond push up</string>
  <string name="push_up">Push Up</string>
  <string name="otot_lengan_pemula">Otot lengan • Pemula</string>
  <string name="squats">Squats</string>
  <string name="otot_kaki_pemula">Otot kaki • Pemula</string>
  <string name="jumping_squats">Jumping squats</string>
  <string name="otot_perut_menengah_">Otot perut • Menengah</string>
  <string name="sit_up">Sit Up</string>
  <string name="x_26">x 26</string>
  <string name="_00_30">00:30</string>
  <string name="otot_dada_menengah">Otot dada • Menengah</string>
  <string name="otot_lengan_menengah">Otot lengan • Menengah</string>
  <string name="otot_kaki_menengah">Otot kaki • Menengah</string>
  <string name="otot_perut_lanjutan_">Otot perut • Lanjutan</string>
  <string name="x_36">x 36</string>
  <string name="_00_40">00:40</string>
  <string name="otot_dada_lanjutan">Otot dada • Lanjutan</string>
  <string name="_226">226</string>
  <string name="_22">22</string>
  <string name="_326">326</string>
  <string name="_32">32</string>
  <string name="otot_lengan_lanjutan">Otot lengan • Lanjutan</string>
  <string name="otot_kaki_lanjutan">Otot kaki • Lanjutan</string>
  <string name="label_durasi">Durasi</string>
  <string name="tidak_ada_latihan">Tidak ada latihan</string>
  <string name="jenis_latihan">Jenis Latihan</string>
  <string name="profile">Profile</string>
  <string name="logout">Keluar</string>
  <string name="nama_depan">Nama depan</string>
  <string name="nama_belakang">Nama belakang</string>
  <string name="berat_badan">Berat badan</string>
  <string name="_kg">%s kg</string>
  <string name="tinggi_badan">Tinggi badan</string>
  <string name="_cm">%s cm</string>
  <string name="edit">Edit</string>
  <string name="latihan_selesai">Latihan Selesai</string>
  <string name="durasi">Durasi</string>
  <string name="latihan">Latihan</string>
  <string name="durasi_latihan" formatted="true">%s m</string>
  <string name="minimal_password">Password minimal 8 karakter</string>
  <string name="field_tidak_boleh_kosong">Field tidak boleh kosong</string>
  <string name="apakah_anda_ingin_keluar">Apakah anda ingin keluar?</string>
  <string name="istirahat">Istirahat</string>
  <string name="edit_profile">Edit Profile</string>
  <string name="ask_edit_profile">Edit profile?</string>
  <string name="berat_badan_kg">Berat badan (kg)</string>
  <string name="tinggi_badan_cm">Tinggi badan (cm)</string>
  <string name="kembali">Kembali</string>
  <string name="password">Password</string>
  <string name="username">Username</string>

</resources>