<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/dark_grey"
  tools:context=".ui.hasillatihan.HasilLatihanActivity">

  <ImageView
    android:id="@+id/result_image_illustration"
    android:layout_width="match_parent"
    android:layout_height="365dp"
    android:scaleType="center"
    android:src="@drawable/ex_result_image_illustration"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/tv_latihan_selesai"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="42dp"
    android:text="@string/latihan_selesai"
    android:textAllCaps="true"
    android:textColor="@color/white"
    android:textSize="36sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/result_image_illustration" />

  <TextView
    android:id="@+id/tv_nama_latihan"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/otot_perut_pemula"
    android:textColor="@color/white"
    android:textSize="16sp"
    app:layout_constraintStart_toStartOf="@id/tv_latihan_selesai"
    app:layout_constraintTop_toBottomOf="@id/tv_latihan_selesai" />

  <androidx.cardview.widget.CardView
    android:id="@+id/card_hasil_latihan"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:layout_marginHorizontal="32dp"
    android:layout_marginTop="52dp"
    app:cardBackgroundColor="@color/purple"
    app:cardCornerRadius="12dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/tv_nama_latihan">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <TextView
        android:id="@+id/tv_jumlah_gerakan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_latihan"
        app:layout_constraintEnd_toStartOf="@+id/tv_jumlah_kalori"
        android:layout_marginEnd="38dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="5" />

      <TextView
        android:id="@+id/tv_latihan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latihan"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_jumlah_gerakan"
        app:layout_constraintTop_toBottomOf="@+id/tv_jumlah_gerakan"
        tools:layout_editor_absoluteX="16dp"
        tools:text="Latihan" />

      <TextView
        android:id="@+id/tv_jumlah_kalori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_22"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_jumlah_durasi"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_jumlah_gerakan"
        app:layout_constraintTop_toTopOf="@id/tv_jumlah_gerakan"
        tools:text="22" />

      <TextView
        android:id="@+id/tv_jumlah_durasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_20"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginStart="38dp"
        app:layout_constraintStart_toEndOf="@+id/tv_jumlah_kalori"
        app:layout_constraintTop_toTopOf="@id/tv_jumlah_gerakan" />

      <TextView
        android:id="@+id/tv_kalori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kalori"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_latihan"
        app:layout_constraintStart_toStartOf="@id/tv_jumlah_kalori" />

      <TextView
        android:id="@+id/tv_durasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/durasi"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/tv_jumlah_durasi"
        app:layout_constraintTop_toBottomOf="@id/tv_jumlah_durasi" />


    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>

  <com.google.android.material.button.MaterialButton
    android:id="@+id/btn_kembali_ke_beranda"
    style="@style/Widget.Material3.Button.IconButton.Filled"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="48dp"
    android:backgroundTint="@color/white"
    app:icon="@drawable/baseline_arrow_back_24"
    app:iconSize="32dp"
    app:iconTint="@color/black"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="@id/tv_latihan_selesai" />
</androidx.constraintlayout.widget.ConstraintLayout>