<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.register.RegisterActivity">

  <com.google.android.material.progressindicator.CircularProgressIndicator
    android:id="@+id/progressbar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:elevation="3dp"
    android:indeterminate="true"
    android:visibility="gone"
    app:indicatorColor="@color/navy"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="-20dp"
    android:src="@drawable/register_bg"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="-100dp"
    android:background="@drawable/bg_form_login"
    android:paddingStart="50dp"
    android:paddingTop="50dp"
    android:paddingEnd="50dp"
    app:layout_constraintBottom_toTopOf="@+id/guideline2"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
      android:id="@+id/tv_daftar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="100dp"
      android:fontFamily="@font/roboto_bold"
      android:text="@string/edit_profile"
      android:textColor="@color/black"
      android:textSize="28sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/et_nama_depan"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:hint="@string/nama_depan"
      app:boxCornerRadiusBottomEnd="12dp"
      app:boxCornerRadiusBottomStart="12dp"
      app:boxCornerRadiusTopEnd="12dp"
      app:boxCornerRadiusTopStart="12dp"
      app:boxStrokeColor="@color/navy"
      app:boxStrokeWidth="2dp"
      app:cursorColor="@color/navy"
      app:hintTextColor="@color/navy"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_daftar">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_nama_depan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/et_nama_belakang"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:hint="@string/nama_belakang"
      app:boxCornerRadiusBottomEnd="12dp"
      app:boxCornerRadiusBottomStart="12dp"
      app:boxCornerRadiusTopEnd="12dp"
      app:boxCornerRadiusTopStart="12dp"
      app:boxStrokeColor="@color/navy"
      app:boxStrokeWidth="2dp"
      app:cursorColor="@color/navy"
      app:hintTextColor="@color/navy"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_nama_depan">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_nama_belakang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/ti_tinggi_badan"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:hint="@string/tinggi_badan_cm"
      app:boxCornerRadiusBottomEnd="12dp"
      app:boxCornerRadiusBottomStart="12dp"
      app:boxCornerRadiusTopEnd="12dp"
      app:boxCornerRadiusTopStart="12dp"
      app:boxStrokeColor="@color/navy"
      app:boxStrokeWidth="2dp"
      app:cursorColor="@color/navy"
      app:hintTextColor="@color/navy"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et_nama_belakang">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_tinggi_badan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/ti_berat_badan"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:hint="@string/berat_badan_kg"
      app:boxCornerRadiusBottomEnd="12dp"
      app:boxCornerRadiusBottomStart="12dp"
      app:boxCornerRadiusTopEnd="12dp"
      app:boxCornerRadiusTopStart="12dp"
      app:boxStrokeColor="@color/navy"
      app:boxStrokeWidth="2dp"
      app:cursorColor="@color/navy"
      app:hintTextColor="@color/navy"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/ti_tinggi_badan">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_berat_badan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btn_kembali"
      android:layout_width="120dp"
      android:layout_height="50dp"
      android:layout_marginTop="30dp"
      android:background="@drawable/bg_edit_text"
      android:text="@string/kembali"
      android:textAllCaps="false"
      android:textColor="@color/black"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/ti_berat_badan" />

    <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btn_edit"
      android:layout_width="120dp"
      android:layout_height="0dp"
      android:layout_marginTop="30dp"
      android:background="@drawable/bg_btn_navy"
      android:text="@string/edit"
      android:textAllCaps="false"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/ti_berat_badan" />

  </androidx.constraintlayout.widget.ConstraintLayout>


  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/guideline2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_begin="580dp" />


</androidx.constraintlayout.widget.ConstraintLayout>